force-app/main/default/objects/Product2/fields/AVSFQB__COGS__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__COGS__c</fullName>
    <description>Cost of goods sold</description>
    <label>COGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>