force-app/main/default/objects/Product2/fields/AVSFQB__QuickBooks_ItemType__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
    <label>QuickBooks Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ItemService</fullName>
                <default>true</default>
                <label>ItemService</label>
            </value>
            <value>
                <fullName>ItemNonInventory</fullName>
            </value>
            <value>
                <fullName>ItemOtherCharge</fullName>
            </value>
            <value>
                <fullName>ItemInventory</fullName>
            </value>
            <value>
                <fullName>ItemInventoryAssembly</fullName>
            </value>
            <value>
                <fullName>ItemDiscount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>