force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spa Services</fullName>
            </value>
            <value>
                <fullName>Memberships</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Laser</fullName>
            </value>
            <value>
                <fullName>Pro-Rate</fullName>
            </value>
            <value>
                <fullName>Past Due Balance</fullName>
            </value>
            <value>
                <fullName>INJ- Neurotoxin</fullName>
            </value>
            <value>
                <fullName>INJ- Dermal Filler</fullName>
            </value>
            <value>
                <fullName>Retail Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>