force-app/main/default/objects/Product2/fields/Company_Cost__c.field-meta.xml
<CustomField>
    <fullName>Company_Cost__c</fullName>
    <label>Company Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>