force-app/main/default/objects/Product2/fields/Member_Amount__c.field-meta.xml
<CustomField>
    <fullName>Member_Amount__c</fullName>
    <label>Member Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>