force-app/main/default/objects/Product2/fields/Member_Discount__c.field-meta.xml
<CustomField>
    <fullName>Member_Discount__c</fullName>
    <label>Member Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>