force-app/main/default/objects/Product2/fields/New_Client_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Amount__c</fullName>
    <label>New Client Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>