force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facial</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Membership Cancellation</fullName>
            </value>
            <value>
                <fullName>No Show/ CX Fee</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Body Contour</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Fractional Laser Treatment</fullName>
            </value>
            <value>
                <fullName>Pro-Rate for Growing Young Memberships</fullName>
            </value>
            <value>
                <fullName>Intense Pulsed Light Theraphy</fullName>
            </value>
            <value>
                <fullName>Laser Hair Removal</fullName>
            </value>
            <value>
                <fullName>Past Due Balance</fullName>
            </value>
            <value>
                <fullName>Visia Skin Analysis</fullName>
            </value>
            <value>
                <fullName>Laser Tattoo Removal</fullName>
            </value>
            <value>
                <fullName>Tip for Provider</fullName>
            </value>
            <value>
                <fullName>Membership upgrade</fullName>
            </value>
            <value>
                <fullName>Leg Vein Removal</fullName>
            </value>
            <value>
                <fullName>Neurotoxin- Injectable</fullName>
            </value>
            <value>
                <fullName>Dermal Filler-Injectable</fullName>
            </value>
            <value>
                <fullName>Monthly Membership Facial Add-On</fullName>
            </value>
            <value>
                <fullName>Upgrade Monthly Membership Facial</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>