force-app/main/default/objects/Product2/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>43900</fullName>
            </value>
            <value>
                <fullName>43100</fullName>
            </value>
            <value>
                <fullName>44750</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>43850</fullName>
            </value>
            <value>
                <fullName>43150</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>