force-app/main/default/objects/Product2/fields/Supplier_Information__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Information__c</fullName>
    <label>Supplier Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergan</fullName>
            </value>
            <value>
                <fullName>Galderma</fullName>
            </value>
            <value>
                <fullName>Clarity RX</fullName>
            </value>
            <value>
                <fullName>Obagi</fullName>
            </value>
            <value>
                <fullName>IdeaStage</fullName>
            </value>
            <value>
                <fullName>Topix Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Hydrinity</fullName>
            </value>
            <value>
                <fullName>SkinMedica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>